ciatarelli page update

--- a/child_pages/cc-elections/Candidates/ciattarelli.html
+++ b/child_pages/cc-elections/Candidates/ciattarelli.html
@@ -142,23 +142,20 @@
               <h6 class="page-title">Jack Ciatarelli</h6>
               <p>          
 
-                Jack Ciattarelli is a lifelong New Jerseyan with a strong background in both business and public service. Born in 
-                Somerville and raised in Raritan, he holds a B.S. in Accounting and an MBA from Seton Hall University, and is a Certified 
-                Public Accountant (inactive). He successfully launched two small businesses in medical publishing and later served at 
-                multiple levels of New Jersey government, including as a borough councilman, county freeholder, and state assemblyman from 
-                2011 to 2018. In 2021, he ran a competitive race for governor that helped revitalize the Republican Party in the state. 
-                He is now running again, positioning himself as a pragmatic, common-sense conservative focused on restoring fiscal sanity, 
-                government accountability, and affordability for working families.
-                <br>
-                <br>
-                Ciattarelli’s platform centers on bold reforms across affordability, government efficiency, and public integrity. He proposes 
-                capping property taxes, slashing state spending by 30%, consolidating income tax brackets, and incentivizing recent college 
-                grads to stay in New Jersey. His agenda includes an overhaul of state government operations through a new Department of 
-                Government Efficiency (NJDOGE), mandatory in-person work for state employees, and reforms to boards, commissions, and budget 
-                processes. He supports voter ID laws, election security enhancements, bail reform rollbacks, and community policing 
-                incentives. On education, he pushes for school choice expansion, pre-K growth, and a Parents’ Bill of Rights. Additional 
-                proposals include repealing sanctuary policies, banning offshore wind farms, restructuring NJ’s transportation authorities, 
-                and promoting healthcare market reforms, veterans’ support, and disability rights.
+                <p> Jack Ciattarelli is a business-minded former state assemblyman and 2021 GOP gubernatorial finalist running again on a pragmatic, 
+                    “fix-what’s-broken” message—tax relief, government efficiency, and accountability. The statewide platform is familiar; what matters 
+                    here is how (and whether) it translates into results for Cumberland County. 
+                </p> 
+                <p> Through a local lens, Ciattarelli has shown up. Since early 2025 he’s been a regular presence in our area—from the bi-weekly 
+                    Republican breakfasts to major community events like the Puerto Rican Festival, church block parties, and other local gatherings. 
+                    While neither campaign has offered much county-specific policy detail in public remarks yet, his consistent time on the ground 
+                    suggests he’s better positioned <em>right now</em> to speak to our needs than his main opponent, whose public footprint here has been 
+                    limited so far. 
+                </p> 
+                <p> Our focus is simple: will Ciattarelli (and his opponent) address concrete Cumberland priorities—anything that he might be able to directly 
+                    solve or help facilitate through his implied network of local representatives? Until we hear specific plans, this page treats visibility 
+                    and local engagement as meaningful signals while pressing for clear commitments voters can measure through on the record statements. 
+                </p>
                 <br><br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
@@ -178,7 +175,9 @@
     <div class="candidate-help" style="max-width:900px;margin:0 auto 18px auto;">
         <!-- Condensed, always-visible disclaimer -->
         <p style="font-style:italic; font-size:0.95rem; margin:0 0 8px 0;">
-            Note: There are a few ways to use this page. It mixes objective source material with light analysis and first-hand reporting so voters can choose their depth.
+            Note: There are a few ways to use this page. It mixes objective source material with light analysis and first-hand reporting so voters can 
+            choose their depth. Special note: the governors' race is widely covered, please view our quick summary to get a Cumberland County specific 
+            perspective.
         </p>
 
         <details style="border:1px solid #ddd; border-radius:12px; padding:10px 14px; background:#f5f6f8;">
@@ -218,6 +217,155 @@
         </details>
     </div>
 
+    <details>
+  <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+  <div class="video-box-modal can-sec">
+    <h3 class="video-heading">Rally Clip: Jack Ciattarelli & LD3/Gloucester Slate (Diner Event)</h3>
+
+    <iframe src="https://www.youtube.com/embed/kP_nEjd_ISA?si=MQr6cjg0iwKQeOeo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <br><br>
+
+    <details>
+      <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full video summary 📋</summary>
+      <br><br>
+      <div style="padding: 15px 25px; text-align: left;">
+        <p>
+          This clip is from a Gloucester County diner—an easy drive from Cumberland County—where Jack Ciattarelli rallied with LD3 Assembly candidate
+          Chris Konawel plus a slate of nearby legislative and county candidates. If you’re a Cumberland voter thinking “let me grab breakfast and learn
+          about the people on my ballot,” here’s the order to focus on:
+        </p>
+
+        <p><strong>Watch order:</strong><br>
+          • <em>9:00–13:30</em>: Ciattarelli’s core policy pitch (day-one actions & energy plan).<br>
+          • <em>1:51–2:14</em>: Chris Konawel’s ~30-second remarks (brief—no district specifics here).<br>
+          • <em>6:19–8:49</em>: Former sheriff Jonathan Sammons raises a local transparency issue (the K-9 “Ember” case), prompted by audience shouts—relevant to county-level governance.
+        </p>
+
+        <p>
+          Ciattarelli opens by saying no candidate spends more time in South Jersey than he does, then pivots to statewide goals: flipping 13 legislative seats,
+          ending sanctuary policies, returning state workers to offices, appointing an AG who “backs police and parents,” rescinding Policy 5756, changing the State
+          Board of Education and BPU, exiting RGGI, opposing offshore wind/mandates, reopening generation plants, and expanding nuclear—down to bringing back plastic bags.
+        </p>
+
+        <p>
+          Other quick speeches (LD4/5/6 and county commissioner hopefuls) reinforce themes of affordability, parents’ rights, and transparency; the only district-specific
+          issue raised was the K-9 “Ember” matter during Sammons’ comments.
+        </p>
+      </div>
+    </details>
+
+    <br><br>
+
+    <details>
+      <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+      <div class="video-summary" style="margin-top: 1em;">
+        <h2>Rally Clip Summary – Jack Ciattarelli (Gloucester County)</h2>
+        <p>This table highlights the key moments in the clip, with quick takeaways for context.</p>
+        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+          <thead>
+            <tr>
+              <th style="text-align: left;">Timestamp</th>
+              <th style="text-align: left;">Topic</th>
+              <th style="text-align: left;">Key Takeaways</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>0:00</td>
+              <td>South Jersey claim & unity</td>
+              <td>Ciattarelli frames himself as highly present in South Jersey; sets statewide-unity tone and local relevance for the diner rally.</td>
+            </tr>
+            <tr>
+              <td>0:31</td>
+              <td>“We’re winning this race”</td>
+              <td>Confidence message; positions the event within a broader 80-seat electoral context.</td>
+            </tr>
+            <tr>
+              <td>1:09</td>
+              <td>Flip 13 seats plan</td>
+              <td>Outlines path to GOP legislative majority as part of a statewide strategy.</td>
+            </tr>
+            <tr>
+              <td>1:51–2:14</td>
+              <td>LD3 — Chris Konawel (~30s)</td>
+              <td>Quick hits on budget, energy costs, crime/corruption; no LD3 specifics here.</td>
+            </tr>
+            <tr>
+              <td>2:18</td>
+              <td>LD4 intros — Esposito & McManus</td>
+              <td>Affordability and change themes; builds regional slate momentum.</td>
+            </tr>
+            <tr>
+              <td>3:42</td>
+              <td>LD5 — Constance Stitzell</td>
+              <td>Property taxes and parents/education emphasis.</td>
+            </tr>
+            <tr>
+              <td>4:15</td>
+              <td>LD6 — Jack Rangan & Peter Sykes</td>
+              <td>Challenge to long-tenured incumbent; “turn NJ red” framing.</td>
+            </tr>
+            <tr>
+              <td>5:03</td>
+              <td>County chair remarks</td>
+              <td>Underscores county-level commissioner stakes; Gloucester control in play.</td>
+            </tr>
+            <tr>
+              <td>5:57</td>
+              <td>Byron Driscoll (Commissioner candidate)</td>
+              <td>Small-business focus; references COVID stance and governance priorities.</td>
+            </tr>
+            <tr>
+              <td>6:19–8:49</td>
+              <td>Former Sheriff Jonathan Sammons</td>
+              <td>Transparency concerns; “no-show jobs” and K-9 “Ember” case raised by audience—only specific local issue aired.</td>
+            </tr>
+            <tr>
+              <td>9:00–13:30</td>
+              <td>WATCH THIS — Ciattarelli core policy pitch</td>
+              <td>Day-one actions & energy plan: end sanctuary policies; return state workers to offices; appoint AG backing police/parents; rescind Policy 5756; change State BOE & BPU; exit RGGI; oppose offshore wind/mandates; reopen generation; expand nuclear; even plastic-bag rollback.</td>
+            </tr>
+            <tr>
+              <td>13:30</td>
+              <td>First-time voter “Nick”</td>
+              <td>Brief human moment; engagement with a new voter.</td>
+            </tr>
+            <tr>
+              <td>14:09</td>
+              <td>Closing CTA</td>
+              <td>“79-day sprint” message; renewed South Jersey pledge and turnout push.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </details>
+  </div>
+
+  <div class="video-box-modal can-sec">
+  <h3 class="video-heading">Short Clip: Jack Ciattarelli at 7 Star Diner</h3>
+
+  <iframe src="https://www.youtube.com/embed/L6JOyzOQ0HY"
+          title="YouTube Shorts player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen></iframe>
+
+  <br><br>
+
+  <details>
+    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for brief description 📋</summary>
+    <br><br>
+    <div style="padding: 15px 25px; text-align: left;">
+      <p>
+        Quick vertical clip captured at the <strong>7 Star Diner</strong>. It’s a short, candid moment from the same rally stop, useful for a fast look at the room’s energy and Ciattarelli’s retail-politics style.
+      </p>
+    </div>
+  </details>
+</div>
+</details>
+
      <div class="title-info">
         <h2>Ciattarelli</h2>
          <div class="running-for">
@@ -246,7 +394,7 @@
              <button class="quick-summary-reopen">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on June 10th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
@@ -266,39 +414,20 @@
      <div class="video-box-modal can-sec">
         <!-- <h3 class="video-heading"></h3> -->
 
-        <iframe src="https://www.youtube.com/embed/GIG98259g1Q?si=B1S-XLLFcLh8MDA1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+        <iframe src="https://www.youtube.com/embed/kP_nEjd_ISA?si=fSivlnDZspHH08Zf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
     </div> 
          
 
     <div class="event-card">
         <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">05/10/25 - 8:30am</li>
-            <li class="location">Eastlyn Golf Course, 4049 Italia Ave, Vineland, NJ, 08361</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
+            <li class="name"><strong>Ciatarelli Town Hall in Pitman</strong></li>
+            <li class="description">Town Hall Event featuring JACK CIATTARELLI, Republican Candidate for Governor.
+                <a href="https://www.facebook.com/share/1YNVoeaPM5/">Facebook Link with RSVP details</a> 
+            </li>
+            <li class="date-and-time">9/9/25</li>
+            <li class="location">Broadway Theatre of Pitman, 43 S Broadway, Pitman, NJ 08071</li>
         </ul>
-    </div>  
-
-    <div class="event-card">
-        <ul class="event-info">
-            <li class="name"><strong>Jack Ciatarelli Town Hall, Cherry Hill American Legion</strong></li>
-            <li class="description">Meet Jack Ciatarelli and ask questions</li>
-            <li class="date-and-time">05/22/25 - 6:00pm</li>
-            <li class="location">American Legion Post 372, 1532 Martin Ave, Cherry Hill Township, NJ 08002</li>
-            <li class="RSVP"><a href="https://www.facebook.com/events/2718735904989926"> Facebook Event</a></li>
-        </ul>
-    </div>   
-
-    <div class="event-card">
-        <ul class="event-info">
-            <li class="name"><strong>Cumberland County Regular Republican Organization Breakfast</strong></li>
-            <li class="description">Listen to party messaging and potentially meet Republican candidates<a href="https://www.ccrrogop.org/event-calendar"> Party Site</a></li>
-            <li class="date-and-time">05/24/25 - 8:30am</li>
-            <li class="location">Mauricetown Fire Company, 9544 Noble St. Mauricetown, NJ 08349</li>
-            <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
-        </ul>
-    </div>  
+    </div>     
     
      <div class="candidate-agenda">
 
