--- a/child_pages/cc-elections/Candidates/sherrill.html
+++ b/child_pages/cc-elections/Candidates/sherrill.html
@@ -169,7 +169,9 @@
     <div class="candidate-help" style="max-width:900px;margin:0 auto 18px auto;">
         <!-- Condensed, always-visible disclaimer -->
         <p style="font-style:italic; font-size:0.95rem; margin:0 0 8px 0;">
-            Note: There are a few ways to use this page. It mixes objective source material with light analysis and first-hand reporting so voters can choose their depth.
+            Note: There are a few ways to use this page. It mixes objective source material with light analysis and first-hand reporting so voters can 
+            choose their depth. Special note: the governors' race is widely covered, please view our quick summary to get a Cumberland County specific 
+            perspective.
         </p>
 
         <details style="border:1px solid #ddd; border-radius:12px; padding:10px 14px; background:#f5f6f8;">
