sherrill update test

--- a/child_pages/cc-elections/Candidates/sherrill.html
+++ b/child_pages/cc-elections/Candidates/sherrill.html
@@ -142,11 +142,21 @@
               <h6 class="page-title">Mikie Sherrill</h6>
               <p>          
 
-                Mikie Sherrill is running for Governor of New Jersey as a battle-tested public servant with a mission-driven approach to leadership. A U.S. Naval Academy graduate, Navy 
-                helicopter pilot, federal prosecutor, and sitting Congresswoman, Sherrill blends national security credentials with a sharp focus on state-level affordability and 
-                infrastructure. Her campaign emphasizes lowering costs for families, expanding housing, improving transportation, securing reproductive rights, and protecting democracy from 
-                federal overreach. With a detailed, solutions-oriented platform and a record of bipartisan lawmaking, Sherrill positions herself as a forward-looking, pragmatic Democrat — 
-                more reform-minded than party-line, but firmly rooted in institutional leadership and civic responsibility.
+                <p> Mikie Sherrill is a former Navy helicopter pilot, ex–federal prosecutor, and sitting U.S. Representative (NJ-11) now running for governor on an agenda centered on 
+                    affordability, education, and protecting reproductive rights. Her campaign materials pitch lowering costs for families, expanding opportunity, and safeguarding personal 
+                    freedoms—statewide themes that matter here if they translate into concrete help for Cumberland. :contentReference[oaicite:0]{index=0} 
+                </p> 
+                <br>
+                <p> Through a local lens, Sherrill’s visible footprint in Cumberland County has been light so far. A local leader recently remarked at a public event that “we haven’t gotten to 
+                    know her real well yet,” capturing what many residents have voiced about limited face time. She has made at least one stop in Vineland—appearing at Green Olive 2 for a small 
+                    gathering noted on social media—but broader, open community events have been sparse to date. :contentReference[oaicite:1]{index=1} 
+                </p> 
+                <br>
+                <p> Our focus is the same ask we make of every statewide candidate: specific plans for Cumberland priorities—Bayshore economy and tourism, Route 55 safety/capacity, broadband beyond 
+                    the Middle Mile, downtown revitalization in Vineland/Millville/Bridgeton, and state support for small-municipality infrastructure. Until her campaign lays out county-relevant 
+                    commitments (and shows up consistently to discuss them), this page will track visibility and local engagement while pressing for deliverables voters can measure. 
+                    :contentReference[oaicite:2]{index=2} 
+                </p> ::contentReference[oaicite:3]{index=3}
 
                 <br>
                 <br>
@@ -194,11 +204,7 @@
             </li>
             <li><b>Check the agenda & positions.</b> Look for the candidate’s stated agenda and issue stances. We try to group them plainly so you can compare across candidates 
                 quickly.</li>
-            <li><b>Read the Transparency/Accessibility rating.</b> For a deeper look at how transparent the candidate has been (web presence, interviews, follow-ups, meet n greets) and 
-                how communicative they've been in response to outreach, see the rating and its short explanation. This helps you understand what’s easy to find and who is easy to 
-                contact.
-                <!-- <a href="#transparency">Transparency rating</a> -->
-            </li>
+            
             <li><b>Use the page as a multi-layered hub.</b> 
                 If you 'just want the facts', stick to the source documents. If you want opinions about transparency, accessibility, and communication, check the transparency meter. 
                 If you want coverage somewhere in between, like interviews that range from introductory to moderately pressing, watch the interviews. Choose your own adventure.</li>
