sherril update fix

--- a/child_pages/cc-elections/Candidates/sherrill.html
+++ b/child_pages/cc-elections/Candidates/sherrill.html
@@ -144,19 +144,20 @@
 
                 <p> Mikie Sherrill is a former Navy helicopter pilot, ex–federal prosecutor, and sitting U.S. Representative (NJ-11) now running for governor on an agenda centered on 
                     affordability, education, and protecting reproductive rights. Her campaign materials pitch lowering costs for families, expanding opportunity, and safeguarding personal 
-                    freedoms—statewide themes that matter here if they translate into concrete help for Cumberland. :contentReference[oaicite:0]{index=0} 
+                    freedoms—statewide themes that matter here if they translate into concrete help for Cumberland.  
                 </p> 
                 <br>
                 <p> Through a local lens, Sherrill’s visible footprint in Cumberland County has been light so far. A local leader recently remarked at a public event that “we haven’t gotten to 
-                    know her real well yet,” capturing what many residents have voiced about limited face time. She has made at least one stop in Vineland—appearing at Green Olive 2 for a small 
-                    gathering noted on social media—but broader, open community events have been sparse to date. :contentReference[oaicite:1]{index=1} 
+                    know her real well yet,” capturing what many residents have voiced about limited face time. <a href="https://www.youtube.com/watch?v=EllUFdaqTPk">SJWA Event, Comment around 2:12</a>
+                    She has made at least one stop in Vineland—appearing at Green Olive 2 for a small 
+                    gathering noted on social media—but broader, open community events have been unknown to date. <a href="https://www.facebook.com/share/p/16tea4yHGL/">Facebook Post</a>
                 </p> 
                 <br>
                 <p> Our focus is the same ask we make of every statewide candidate: specific plans for Cumberland priorities—Bayshore economy and tourism, Route 55 safety/capacity, broadband beyond 
                     the Middle Mile, downtown revitalization in Vineland/Millville/Bridgeton, and state support for small-municipality infrastructure. Until her campaign lays out county-relevant 
                     commitments (and shows up consistently to discuss them), this page will track visibility and local engagement while pressing for deliverables voters can measure. 
-                    :contentReference[oaicite:2]{index=2} 
-                </p> ::contentReference[oaicite:3]{index=3}
+                     
+                </p> 
 
                 <br>
                 <br>
