tweak sherrill quick summary

--- a/child_pages/cc-elections/Candidates/sherrill.html
+++ b/child_pages/cc-elections/Candidates/sherrill.html
@@ -153,9 +153,9 @@
                     gathering noted on social media—but broader, open community events have been unknown to date. <a href="https://www.facebook.com/share/p/16tea4yHGL/">Facebook Post</a>
                 </p> 
                 <br>
-                <p> Our focus is the same ask we make of every statewide candidate: specific plans for Cumberland priorities—Bayshore economy and tourism, Route 55 safety/capacity, broadband beyond 
-                    the Middle Mile, downtown revitalization in Vineland/Millville/Bridgeton, and state support for small-municipality infrastructure. Until her campaign lays out county-relevant 
-                    commitments (and shows up consistently to discuss them), this page will track visibility and local engagement while pressing for deliverables voters can measure. 
+                <p> Our focus is simple: will Sherrill (and her opponent) address concrete Cumberland priorities—anything that she might be able to directly 
+                    solve or help facilitate through her implied network of local representatives? Until we hear specific plans, this page treats visibility 
+                    and local engagement as meaningful signals while pressing for clear commitments voters can measure through on the record statements.  
                      
                 </p> 
 
