video additions for luz and dixon WIP

--- a/child_pages/cc-elections/Candidates/vasquez.html
+++ b/child_pages/cc-elections/Candidates/vasquez.html
@@ -442,6 +442,15 @@
                     </details> 
                 </div>
 
+                <div class="video-box-modal can-sec"> 
+                    <h3 class="video-heading">2025 Interview With Doug Albrecht</h3> 
+                    <iframe src="https://www.youtube.com/embed/xNFwxKPoJXY?si=g5bMYhRCfXKGqC2d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+        
+                <div class="video-box-modal can-sec"> 
+                    <h3 class="video-heading">2025 Interview With Dennis Rivera</h3> 
+                    <iframe src="https://www.youtube.com/embed/j1DAxGfzUG4?si=0jzqV-ISlHoo5Vpu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>               
+                </div>
         </details>
 
         <br><br>
